--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<h1>Cognifyz Internhsip Project</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>COGNIFYZ INTERNSHIP</title>
+    
+</head>
+<body>
+    <h1>Cognifyz Internhsip Project</h1>
 <ul>
   <li type="numbers"><a href="task_1/index.html">Task1</a>></li>
   <li type="numbers"><a href="task_2/index.html">Task1</a>></li>
@@ -8,3 +17,5 @@
   <li type="numbers"><a href="task_6/index.html">Task1</a>></li>
   <li type="numbers"><a href="task_7/index.html">Task1</a>></li>
 </ul>
+</body>
+</html>   
