--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <h1>Cognifyz Internhsip Project</h1>
+    <h1>Cognifyz Internship Project</h1>
 <ul>
   <li type="numbers"><a href="task_1/index.html">Task1</a>></li>
   <li type="numbers"><a href="task_2/index.html">Task1</a>></li>
